robballen75-Salesforce/4-7-15/src/objects/Acct_Case_Custom_Rollup__c.object
<CustomObject>
    <description>Custom object used to store case and account related information for the generation of the DocXTools Healthcheck score. The data is used by rollup summary and formula fields on the Account object to calculate the Document Support Usage and Recency component scores. Only data for the most recent 12 months are used, so records are purged when they hit that timeframe.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master-Child record to associated Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account-Case Custom Rollup</relationshipLabel>
        <relationshipName>Account_Case_Custom_Rollup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Case_Open_Date__c</fullName>
        <description>Date on which the case was opened. The value is automatically populated via a trigger using the corresponding field value on the case record.</description>
        <label>Case Open Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>The value is automatically populated via a trigger using the corresponding field value on the case record.</description>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin / Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Master-Child record to associated Case.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Account-Case Custom Rollup</relationshipLabel>
        <relationshipName>Account_Case_Custom_Rollup</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purge_Date__c</fullName>
        <description>Formula field used by the KP Health check scoring system. The value represents the date on which the data in the record is no longer relevant and should be purged.</description>
        <formula>Case_Open_Date__c +365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purge Date</label>
        <type>Date</type>
    </fields>
    <label>Account-Case Custom Rollup</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Account-Case CRU ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account-Case Custom Rollup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>